--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,4 +22,7 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
+      run: |
+          echo "Starting Build"
+          javac Solution.java
+          echo "Finishing Build"
